--- a/Module 02/Live Test/index.html
+++ b/Module 02/Live Test/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="array_filter.js"></script>
+    <script src="6.js"></script>
 </body>
 </html>
