--- a/Module 01/Live Class 02/index.html
+++ b/Module 01/Live Class 02/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="number.js"></script>
+    <script src="iif_function.js"></script>
 </body>
 </html>
